--- a/_data/projects.json
+++ b/_data/projects.json
@@ -1,6 +1,6 @@
 [
     {
-        "name": "OWASP Trademarks",
+        "name": "Trademarks",
         "milestones": [],
         "description": "Today our institutional name and the events we host are not protected by copyright. The Foundation will endeavor to register the following marks in the United States, European Union, and the United Kingdom: OWASP, Open Web Application Security Project, Global AppSec, and AppSec Days. Additionally the Foundation will register our figure mark (logo) in these same three domiciles. Once completed, the Foundation will develop and share a Trademark Guidelines document for events, chapters, and projects along with implementing these changes on our websites and event names. At this time, the Foundation does not expect to fund any enforcement activities.",
         "leaders": [],
@@ -72,21 +72,21 @@
         "name": "Donation Form",
         "milestones": [
             {
-                "milestone_date": "2019-11-19",
+                "milestone_date": "2019-11-22",
                 "description": "Form completed for demonstration",
                 "owner": "Simon",
                 "project_name": "Donation Form",
-                "status": "overdue"
+                "status": "on-time"
             },
             {
-                "milestone_date": "2019-11-21",
+                "milestone_date": "2019-12-02",
                 "description": "Regression testing complete",
                 "owner": "Harold",
                 "project_name": "Donation Form",
                 "status": "on-time"
             },
             {
-                "milestone_date": "2019-11-22",
+                "milestone_date": "2019-12-05",
                 "description": "Project Complete ready for deployment",
                 "owner": "Harold",
                 "project_name": "Donation Form",
@@ -117,21 +117,21 @@
         "name": "Membership Form",
         "milestones": [
             {
-                "milestone_date": "2019-11-19",
+                "milestone_date": "2019-11-22",
                 "description": "Form completed for demonstration",
                 "owner": "Simone",
                 "project_name": "Membership Form",
-                "status": "overdue"
+                "status": "on-time"
             },
             {
-                "milestone_date": "2019-11-21",
+                "milestone_date": "2019-12-01",
                 "description": "Regression testing complete",
                 "owner": "Harold",
                 "project_name": "Membership Form",
                 "status": "on-time"
             },
             {
-                "milestone_date": "2019-11-22",
+                "milestone_date": "2019-12-05",
                 "description": "Project Complete ready for deployment",
                 "owner": "Harold",
                 "project_name": "Membership Form",
@@ -175,13 +175,6 @@
     {
         "name": "Website Re-launch",
         "milestones": [
-            {
-                "milestone_date": "2019-11-20",
-                "description": "Update community regarding website migration",
-                "owner": "Harold",
-                "project_name": "Website Re-launch",
-                "status": "overdue"
-            },
             {
                 "milestone_date": "2019-11-25",
                 "description": "Donation form (poc)",
@@ -882,20 +875,20 @@
         "url": "https://www2.owasp.org/www-staff/projects/202006-GlobalAppSec-Dublin"
     },
     {
-        "name": "Projects Summit Summer",
+        "name": "Projects Summit - Summer",
         "milestones": [
             {
                 "milestone_date": "2020-01-01",
                 "description": "New Year's Eve Holiday",
                 "owner": "All",
-                "project_name": "Projects Summit Summer",
+                "project_name": "Projects Summit - Summer",
                 "status": "future"
             },
             {
                 "milestone_date": "2020-07-04",
                 "description": "Independence Day (US) Holiday",
                 "owner": "All",
-                "project_name": "Projects Summit Summer",
+                "project_name": "Projects Summit - Summer",
                 "status": "future"
             }
         ],
@@ -1034,15 +1027,15 @@
                 "status": "future"
             }
         ],
-        "description": "Ocotber 19-23, 2020    Training Days: Ocotber 19-21, 2020  Conference Days: October 22-23, 2020Welcome to Global AppSec San Francisco 2020 presented by the OWASP Foundation. The Global AppSec Conference is the premier application security conference for developers and security experts. Designed for private and public sector infosec professionals, the OWASP three day training and two day conference equips developers, defenders, and advocates to build a more secure web.Join us for a celebration of leading application security technologies, speakers, prospects, and community, in a unique event that will build on everything you already know to expect from an OWASP Global Conference.",
+        "description": "```Training Days: Ocotber 19-21, 2020Conference Days: October 22-23, 2020```Welcome to Global AppSec San Francisco 2020 presented by the OWASP Foundation. The Global AppSec Conference is the premier application security conference for developers and security experts. Designed for private and public sector infosec professionals, the OWASP three day training and two day conference equips developers, defenders, and advocates to build a more secure web.Join us for a celebration of leading application security technologies, speakers, prospects, and community, in a unique event that will build on everything you already know to expect from an OWASP Global Conference.",
         "leaders": [
-            {
-                "name": "Mike McCamon",
-                "email": "mike.mccamon@owasp.com"
-            },
             {
                 "name": "Emily Berman",
                 "email": "emily.berman@owasp.com"
+            },
+            {
+                "name": "Mike McCamon",
+                "email": "mike.mccamon@owasp.com"
             }
         ],
         "url": "https://www2.owasp.org/www-staff/projects/202010-Global-AppSec-SF"
