--- a/_data/projects.json
+++ b/_data/projects.json
@@ -525,70 +525,70 @@
         "name": "Projects Summit - Winter 2020",
         "milestones": [
             {
-                "milestone_date": "2019-12-06",
+                "milestone_date": "2019-11-29",
                 "description": "Venue contract signed",
                 "owner": "Emily",
                 "project_name": "Projects Summit - Winter 2020",
                 "status": "on-time"
             },
             {
-                "milestone_date": "2019-12-14",
+                "milestone_date": "2020-01-02",
                 "description": "Project Nomination Form online",
                 "owner": "Mike",
                 "project_name": "Projects Summit - Winter 2020",
-                "status": "on-time"
+                "status": "future"
             },
             {
-                "milestone_date": "2019-12-16",
+                "milestone_date": "2020-01-05",
                 "description": "Project Nomination Opens",
                 "owner": "Harold",
                 "project_name": "Projects Summit - Winter 2020",
-                "status": "on-time"
+                "status": "future"
             },
             {
-                "milestone_date": "2019-12-16",
+                "milestone_date": "2020-01-06",
                 "description": "Email solicitation sent to Leaders list",
-                "owner": "Harold",
-                "project_name": "Projects Summit - Winter 2020",
-                "status": "on-time"
-            },
-            {
-                "milestone_date": "2019-12-20",
-                "description": "Reminder #2",
-                "owner": "Harold",
-                "project_name": "Projects Summit - Winter 2020",
-                "status": "on-time"
-            },
-            {
-                "milestone_date": "2019-12-31",
-                "description": "Reminder #3",
                 "owner": "Harold",
                 "project_name": "Projects Summit - Winter 2020",
                 "status": "future"
             },
             {
                 "milestone_date": "2020-01-08",
-                "description": "Reminder #4",
-                "owner": "Harold",
-                "project_name": "Projects Summit - Winter 2020",
-                "status": "future"
-            },
-            {
-                "milestone_date": "2020-01-10",
-                "description": "Reminder #5",
+                "description": "Reminder #2",
                 "owner": "Harold",
                 "project_name": "Projects Summit - Winter 2020",
                 "status": "future"
             },
             {
                 "milestone_date": "2020-01-14",
-                "description": "Project Nomination Form Closes",
+                "description": "Reminder #3",
                 "owner": "Harold",
                 "project_name": "Projects Summit - Winter 2020",
                 "status": "future"
             },
             {
                 "milestone_date": "2020-01-20",
+                "description": "Reminder #4",
+                "owner": "Harold",
+                "project_name": "Projects Summit - Winter 2020",
+                "status": "future"
+            },
+            {
+                "milestone_date": "2020-01-22",
+                "description": "Reminder #5",
+                "owner": "Harold",
+                "project_name": "Projects Summit - Winter 2020",
+                "status": "future"
+            },
+            {
+                "milestone_date": "2020-01-26",
+                "description": "Project Nomination Form Closes",
+                "owner": "Harold",
+                "project_name": "Projects Summit - Winter 2020",
+                "status": "future"
+            },
+            {
+                "milestone_date": "2020-01-28",
                 "description": "Projects Selected (5)",
                 "owner": "Harold",
                 "project_name": "Projects Summit - Winter 2020",
@@ -854,7 +854,7 @@
                 "status": "future"
             }
         ],
-        "description": "June 15-19, 2020    Training Days: June 15-17, 2020  Conference Days: June 18-19, 2020Welcome to Global AppSec Dublin 2020 presented by the OWASP Foundation. The Global AppSec Conference is the premier application security conference for developers and security experts. Designed for private and public sector infosec professionals, the OWASP three day training and two day conference equips developers, defenders, and advocates to build a more secure web.Join us for a celebration of leading application security technologies, speakers, prospects, and community, in a unique event that will build on everything you already know to expect from an OWASP Global Conference.",
+        "description": "```Training Days: June 15-17, 2020  Conference Days: June 18-19, 2020```Welcome to Global AppSec Dublin 2020 presented by the OWASP Foundation. The Global AppSec Conference is the premier application security conference for developers and security experts. Designed for private and public sector infosec professionals, the OWASP three day training and two day conference equips developers, defenders, and advocates to build a more secure web.Join us for a celebration of leading application security technologies, speakers, prospects, and community, in a unique event that will build on everything you already know to expect from an OWASP Global Conference.",
         "leaders": [
             {
                 "name": "Mike McCamon",
@@ -871,91 +871,84 @@
         "name": "Projects Summit - Summer",
         "milestones": [
             {
-                "milestone_date": "2020-05-30",
-                "description": "",
-                "owner": "No Owner",
-                "project_name": "Projects Summit - Summer",
-                "status": "future"
-            },
-            {
-                "milestone_date": "2020-07-30",
-                "description": "Day One, Projects Summit - Summer",
-                "owner": "All",
-                "project_name": "Projects Summit - Summer",
-                "status": "future"
-            },
-            {
-                "milestone_date": "2019-06-05",
+                "milestone_date": "2020-05-02",
                 "description": "Venue contract signed",
                 "owner": "Emily",
                 "project_name": "Projects Summit - Summer",
-                "status": "overdue"
+                "status": "future"
             },
             {
-                "milestone_date": "2019-06-12",
+                "milestone_date": "2020-06-05",
                 "description": "Project Nomination Form online",
                 "owner": "Mike",
                 "project_name": "Projects Summit - Summer",
-                "status": "overdue"
+                "status": "future"
             },
             {
-                "milestone_date": "2019-06-17",
+                "milestone_date": "2020-06-08",
                 "description": "Project Nomination Opens",
                 "owner": "Harold",
                 "project_name": "Projects Summit - Summer",
-                "status": "overdue"
+                "status": "future"
             },
             {
-                "milestone_date": "2019-06-18",
+                "milestone_date": "2020-06-09",
                 "description": "Email solicitation sent to Leaders list",
                 "owner": "Harold",
                 "project_name": "Projects Summit - Summer",
-                "status": "overdue"
+                "status": "future"
             },
             {
-                "milestone_date": "2019-06-22",
+                "milestone_date": "2020-06-11",
                 "description": "Reminder #2",
                 "owner": "Harold",
                 "project_name": "Projects Summit - Summer",
-                "status": "overdue"
+                "status": "future"
             },
             {
-                "milestone_date": "2019-06-26",
+                "milestone_date": "2020-06-17",
                 "description": "Reminder #3",
                 "owner": "Harold",
                 "project_name": "Projects Summit - Summer",
-                "status": "overdue"
+                "status": "future"
             },
             {
-                "milestone_date": "2020-07-03",
+                "milestone_date": "2020-06-23",
                 "description": "Reminder #4",
                 "owner": "Harold",
                 "project_name": "Projects Summit - Summer",
                 "status": "future"
             },
             {
-                "milestone_date": "2020-07-07",
+                "milestone_date": "2020-06-25",
                 "description": "Reminder #5",
                 "owner": "Harold",
                 "project_name": "Projects Summit - Summer",
                 "status": "future"
             },
             {
-                "milestone_date": "2020-07-09",
+                "milestone_date": "2020-06-29",
                 "description": "Project Nomination Form Closes",
                 "owner": "Harold",
                 "project_name": "Projects Summit - Summer",
                 "status": "future"
             },
             {
-                "milestone_date": "2020-07-10",
+                "milestone_date": "2020-07-01",
                 "description": "Projects Selected (5)",
                 "owner": "Harold",
                 "project_name": "Projects Summit - Summer",
                 "status": "future"
             },
             {
-                "milestone_date": "2020-07-15",
+                "milestone_date": "2020-07-01",
+                "description": "Registration Form Online",
+                "owner": "Harold",
+                "project_name": "Projects Summit - Summer",
+                "status": "future"
+            },
+            {
+                "milestone_date": "2020-07-14",
                 "description": "Flight bookings complete to qualify for reimbursement/travel assistance grants",
                 "owner": "No Owner",
                 "project_name": "Projects Summit - Summer",
@@ -969,28 +962,28 @@
                 "status": "future"
             },
             {
-                "milestone_date": "2020-02-21",
+                "milestone_date": "2020-07-31",
                 "description": "Summitt Hours 9a-5p",
                 "owner": "No Owner",
                 "project_name": "Projects Summit - Summer",
                 "status": "future"
             },
             {
-                "milestone_date": "2020-02-22",
+                "milestone_date": "2020-08-01",
                 "description": "Summitt Hours 9a-5p",
                 "owner": "No Owner",
                 "project_name": "Projects Summit - Summer",
                 "status": "future"
             },
             {
-                "milestone_date": "2020-04-22",
+                "milestone_date": "2020-09-30",
                 "description": "Deadline for invoices and expense reimbursement requests",
                 "owner": "Dawn",
                 "project_name": "Projects Summit - Summer",
                 "status": "future"
             }
         ],
-        "description": "Each project will have a 2-3 paragraph overview narrative. Keep to the key top points about the project. Visitors should be able to read this short narrative and have a good understanding of the project without having to scroll the entire document.",
+        "description": "The OWASP Foundation will host a three-day working session for FIVE selected projects in Europe, July 30 - August 1, 2020. Arrival day will be Wednesday the 29th and departures will be August 2nd. Projects must apply and then get selected to participate. The application process will require project meeting goals, workplan, key contributors, and expected attendance. The OWASP Foundation Officers Group will make the final selection.The event program will solely include heads-down work time for OWASP projects. Any \"group\" gatherings will be during meal times. Spectators are not welcomed and attendance is limited to OWASP Members. Limited travel assistance will be provided for up to five key project leaders/contributors per project selected.Leaders of projects selected are required to attend or that project will not be selected. If a project fails to secure five attendees, their project's invitation will be rescinded.",
         "leaders": [
             {
                 "name": "Harold Blankenship",
