remote update file

--- a/_data/projects.json
+++ b/_data/projects.json
@@ -529,7 +529,7 @@
                 "description": "Venue contract signed",
                 "owner": "Emily",
                 "project_name": "Projects Summit - Winter 2020",
-                "status": "on-time"
+                "status": "overdue"
             },
             {
                 "milestone_date": "2020-01-02",
