--- a/_data/projects.json
+++ b/_data/projects.json
@@ -114,7 +114,7 @@
                 "description": "Regression testing complete",
                 "owner": "Harold",
                 "project_name": "Membership Form",
-                "status": "on-time"
+                "status": "overdue"
             },
             {
                 "milestone_date": "2019-12-05",
@@ -128,7 +128,7 @@
                 "description": "Load historical Membership transaction data into Stripe with email as key",
                 "owner": "Harold",
                 "project_name": "Membership Form",
-                "status": "on-time"
+                "status": "overdue"
             },
             {
                 "milestone_date": "2019-12-11",
@@ -180,7 +180,7 @@
                 "description": "Redirect inventory from SEO firm",
                 "owner": "Mike",
                 "project_name": "Website Re-launch",
-                "status": "on-time"
+                "status": "overdue"
             },
             {
                 "milestone_date": "2019-12-02",
@@ -439,7 +439,7 @@
                 "description": "New Year\u2019s Day",
                 "owner": "No Owner",
                 "project_name": "OWASP Staff Holidays",
-                "status": "future"
+                "status": "on-time"
             },
             {
                 "milestone_date": "2020-02-17",
@@ -651,7 +651,7 @@
                 "description": "New Year's Eve Holiday",
                 "owner": "All",
                 "project_name": "BlackHat Asia",
-                "status": "future"
+                "status": "on-time"
             },
             {
                 "milestone_date": "2020-07-04",
@@ -746,7 +746,7 @@
                 "description": "Open CFT/CFP",
                 "owner": "Emily",
                 "project_name": "Global AppSec - Dublin 2020",
-                "status": "on-time"
+                "status": "overdue"
             },
             {
                 "milestone_date": "2019-12-15",
