--- a/_data/projects.json
+++ b/_data/projects.json
@@ -83,7 +83,7 @@
                 "description": "Project Complete ready for deployment",
                 "owner": "Harold",
                 "project_name": "Donation Form",
-                "status": "on-time"
+                "status": "overdue"
             },
             {
                 "milestone_date": "2019-12-11",
@@ -121,7 +121,7 @@
                 "description": "Project Complete ready for deployment",
                 "owner": "Harold",
                 "project_name": "Membership Form",
-                "status": "on-time"
+                "status": "overdue"
             },
             {
                 "milestone_date": "2019-12-01",
@@ -169,28 +169,28 @@
         "name": "Website Re-launch",
         "milestones": [
             {
-                "milestone_date": "2019-12-05",
+                "milestone_date": "2019-12-06",
                 "description": "Chapter pages migrated (not production)",
                 "owner": "Harold",
                 "project_name": "Website Re-launch",
                 "status": "on-time"
             },
             {
-                "milestone_date": "2019-12-05",
+                "milestone_date": "2019-12-06",
                 "description": "Project pages migrated (not production)",
                 "owner": "Harold",
                 "project_name": "Website Re-launch",
                 "status": "on-time"
             },
             {
-                "milestone_date": "2019-12-05",
+                "milestone_date": "2019-12-06",
                 "description": "Events pages migrated (not production)",
                 "owner": "Harold",
                 "project_name": "Website Re-launch",
                 "status": "on-time"
             },
             {
-                "milestone_date": "2019-12-06",
+                "milestone_date": "2019-12-09",
                 "description": "Metadata template information from SEO firm",
                 "owner": "Harold",
                 "project_name": "Website Re-launch",
@@ -563,7 +563,7 @@
                 "description": "Project Nomination Opens",
                 "owner": "Harold",
                 "project_name": "Projects Summit - Winter 2020",
-                "status": "future"
+                "status": "on-time"
             },
             {
                 "milestone_date": "2020-01-06",
@@ -780,7 +780,7 @@
                 "description": "Launch Call for Program Team Members",
                 "owner": "Emily",
                 "project_name": "Global AppSec - Dublin 2020",
-                "status": "on-time"
+                "status": "overdue"
             },
             {
                 "milestone_date": "2019-12-31",
